# Arduino-Chunithm-Controller

./: Arduino-Chunithm-Controller.ino  ChuniController-EEPROM-Lighting.ino  ChuniController-EEPROM.ino  ChuniController-full_version.ino  ChuniController.ino  Chunithm-Controller-EEPROM.ino  PCB.json  README.md  ShowLED.h
ChuniKeyController/chuniio-serial-led/: chuniio.c  chuniio.def  meson.build
ChuniSerialController/: ChuniSerialController.ino  cmd.h  slider_cmd.h
ChuniSerialController/chuniio/: chuniio.c  chuniio.h  config.c  config.h  meson.build
Example/: Example.ino  亚克力设计图.dwg
MPR121test/: MPR121test.ino
chuniio/: chuniio.h  config.c  config.h
old/: ChuniController-EEPROM-Lighting.ino  ChuniController-full_version.ino  ChuniController.ino  ShowLED.h
old/Example/: ShowLED.h
